apps/dev/homepage/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
