apps/dev/homepage/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: homepage-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:QNUuibx20V5pwCadSSBNGw9M0O7HaMYuY1LfhCwKlw==,iv:EyaV3KgSlXnPjvTZOjKuG8U27BLAnStt8FZ43QGJVvU=,tag:AXRDetWLNI2exEVx9HEf/g==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:ROAo8nXrQZcARdCzMmAPnDwvWYFXG+tEZzApaC5KZA==,iv:bkaKWwzgVldaHy1UeuGueLuAf873H9CdEi5gpTAm65s=,tag:PDKWTU5BDHZrEtS+yICFQQ==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5bjVKOVF0VWp0SUxaZmVT
[...]
            KMwyqMHPwsyv6AWuZTztzr9iL2G/bqITd70HsSYGzF3EIu3tpvXqag==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T00:17:55Z"
    mac: ENC[AES256_GCM,data:Cs4UZ6Q5hrdsRMtwyX26jDKn0RJE2WuiuELN3teRtkK645McX//KkgLRP4ntNQsjt17h6yQDm4OtU+AI0TfN2F+s6GHdh7BtB3q65Y55Be8vwyTCuF0Lh1F7s630/ntnM1xe5MxSfOL4n9G51wa0wsI49umuJzdBL3Hv/MhLPdY=,iv:YB4fhYuaL4ehP3lw4gOhDzIMlhG4/MRsAENYWqfV3cc=,tag:RyX+NVjtuESk3eNeLcnrBg==,type:str]
    pgp:
        - created_at: "2024-06-22T00:17:55Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//QQp+Q1lz3ZqyZQZFIva216cQ+e3/4uEShIuNV/k0uAZG
[...]
            =75+P
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
