apps/dev/homepage/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: homepage
  name: homepage
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.40.183
  ports:
  - name: homepage
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/name: homepage
