apps/dev/homepage/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: homepage.dev.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:N+MOt1DQcMnchfJ6Xj/KZjkSG+MwcB4Pjs9YqVRghA==,iv:KI9W5l5kVfbGtJoBIaN8z/5BACbWD40lRyH3cdMMLOg=,tag:Aox8+bIvTi+bM4WwV2bfDQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:fSHGwf7HGiuYAbDhyvPsAF9aCHzxCQ==,iv:SVxuF6EsmsVuZohxs8ZafklSAvQ3m6OFFpSzfKpJucU=,tag:v7Glgzc9KgxiMNI7ZyE9hw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: homepage
    namespace: homepage
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:b2FVxF3zXFki3xspSeUyfTu8yykJjLYmlHrjwwRPVagxUaQtKpRS,iv:YSJV49VGgqzhNzreBah6CbWmYtVTdd+AVcNy7/WbQ1M=,tag:UcDla1BLy76DVWUgDdi1Ww==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              namespace: homepage
    tls:
        domains:
            - main: ENC[AES256_GCM,data:9NlUzVF0Q7ootoG2on/hKxfl,iv:GnUgPSQVHuJpcx+E0/tD6CWY3wiIWZ+T73073BpcF5c=,tag:ZNNhtEhUCsPgM+97ZdCqvQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:tdK6aptEAWhOhCbHmCLzCTr22g==,iv:V5AsuxYDdxY0HKpKcaQQNz8Cg16XucID95XCOIrl0lM=,tag:2+rDZFFGZK3X9f5odri1uw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5eEhwUnIxb1JYeFFPSm1B
[...]
            C2oU6tCJrlG1c+jmAg8QhBXlYOMLkplHxHDzU0grxUXYYOEGYj410A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-13T15:27:57Z"
    mac: ENC[AES256_GCM,data:y0saZefTbzDsKGURAMkQDC8I2/hz2fZk94DiHdSXMxszllWMERp62d+L8OYKdvuVDCmNd1WQfLp7K8gkzdWYEMogcV5Y3Uz7m1dh8YvOigF1LwyDzu/mTKwDQs9sWxw3IJAXywmf0rk0XMLDmPezSRY2cRfaoEMNpcf/4j3biA0=,iv:VkYs+e2B3eCSwaSYkqrXCadxts2iJs/qgYUzPC5cdlo=,tag:Ju/53xun+fSYnnJ1UYlzNA==,type:str]
    pgp:
        - created_at: "2024-06-22T15:17:41Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//Q4DlhzFhnkzqO6irHb4gopt8XJT7KC6ZrkAhjX4r3EEp
[...]
            =NPbN
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
