apps/dev/homepage/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: homepage.dev.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:Q6lEQoLcjr80Ic6C7tWr7IXq1Jqn0SkUkadR8hB7BQ==,iv:Q2A4z+uZFUjBbe5pQVl2ITShWHsVogqPminqk5m9BEE=,tag:QkliEeYgtK4DbxQvQy8Kow==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:7Fc3Nba6H5HIu0k9p16+GTUg5A72VQ==,iv:+GAGYp0ToYjr3cR76eCSdmQwGZz80uyjtKwwwt1ctDU=,tag:k7JcKn++KcmFSqopePSCHg==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: homepage-staging
    namespace: homepage
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:quciIiuVK8yskT+NAkmBSPPC+YiXjzS9eu4OPiU7pxCKhp66dLV5,iv:1yRxGayP0Q5s2HgNF/R7dq5M7Ywt0244UwQHy24J9No=,tag:iEJXH8RnyvJJqX2ZuWLbbg==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              namespace: homepage
    tls:
        domains:
            - main: ENC[AES256_GCM,data:F4oAngYTPxGklHEAF7kCqvfF,iv:X8TEwf/BfPUbmrfqHrwxm/vqE6+2QUqDoQ3Or7tQcIA=,tag:8Om69F9YpNvS6LkNPapXtw==,type:str]
              sans:
                - ENC[AES256_GCM,data:/xNgcF2GjZwLy9CJzsR3a9VaQg==,iv:5dqUZfRxBuYehySlHD2E9NP48EHfrXD43pw49M8jS6g=,tag:Z6kvUTSYiCm+GvJ+4fjvrg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSMVcrNWlQcHRDRnp6Zmtz
[...]
            wj7URiBAtcXd/z/KQE98YADoCd/cMIgsQo6HE9gmkIXv8inkdz9KNQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-09-13T15:27:42Z"
    mac: ENC[AES256_GCM,data:Fvz3TA1nJ5PCFJD/DKX8/Pq5i4Pgu/1V8ZETO+nkaU3rzTjOOBxlqTDfGUXnUqzyWRFxslznDuLzFRc7bMNvGaxgXeQuZkNH78Bqx4whECr3igJtO9kwCs9Z7s/0MSGj6LuVGsUD/wjAZ40OrMFjqvhpwz5iGxjzKXX1iOXEHHg=,iv:Jez+ms4ADLzE/oT9Rei8or0bZcpK2RSgcgYPlMbYa2w=,tag:PcD0WVu/6Vv/Sop4xX0t9A==,type:str]
    pgp:
        - created_at: "2024-06-22T15:17:47Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAsVfL7+g9i5qLdUAJCx2tcCWqXQIeKR3MFnSjYmtuTLKw
[...]
            =RSor
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
